# Ygor

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  NOTES  PKGBUILD  README  README.md  YgorArguments.h  YgorConfig.cmake.in  YgorEnvironment.h  YgorFilesDirs.cc  YgorImages.cc  YgorImages.h  YgorImagesIO.h  YgorImagesIOBoostSerialization.h  YgorMath.cc  YgorMath.h  YgorMathBSpline.h  YgorMathChebyshev.cc  YgorMathChebyshev.h  YgorMathChebyshevFunctions.cc  YgorMathChebyshevIOBoostSerialization.h  YgorMathIOOFF.cc  YgorMathIOOFF.h  YgorMathPlotting.h  YgorMathPlottingGnuplot.h  YgorMathPlottingVTK.h  YgorNetworking.h  YgorPerformance.h  YgorPlot.h  YgorSerialize.cc  YgorStats.cc  YgorStats.h  YgorString.cc  YgorTime.h  Ygor_Compiler_Flags.sh  check_syntax.sh  clean_compile_and_install.sh  clean_compile_and_package_debian.sh  (+3 more)
ComputerAlgebraStuff/: YgorMath_Samples_1D_Integrate_Over_Kernel_exp.wxm  YgorMath_Samples_1D_Local_Curvature_via_Tangent_Circle_by_linearing_system_of_eqns_and_inverting.wxm
Helpers/: 20151001_Prune_Ygor_for_inline_YgorImages_usage.sh  Mirror_to_Git_and_Commit.sh
Migration_Scripts/: From_MyUtils_to_Ygor.sh  From_YgorMath_to_YgorStats.sh
OLD/: 20140908_YgorString.cc  20140908_YgorString.h  20141208_YgorMath.cc  20141208_YgorMath.h  20150304_YgorImages.cc  20150304_YgorImages.h  20150930_YgorAlgorithms.cc  20150930_YgorAlgorithms.h  20150930_YgorCONFIGTools.cc  20150930_YgorContainers.cc  20150930_YgorContainers.h  20150930_YgorEnvironment.cc  20150930_YgorFilesDirs.cc  20150930_YgorFilesDirs.h  20150930_YgorImages.cc  20150930_YgorImages.h  20150930_YgorImagesIO.cc  20150930_YgorImagesIO.h  20150930_YgorImagesPlotting.h  20150930_YgorMath.cc  20150930_YgorMath.h  20150930_YgorMath_Samples.cc  20150930_YgorMisc.cc  20150930_YgorMisc.h  20150930_YgorNetworking.cc  20150930_YgorPerformance.cc  20150930_YgorPlot.cc  20150930_YgorPlot.h  20150930_YgorSerialize.cc  20150930_YgorStats.cc  20150930_YgorStats.h  20150930_YgorString.cc  20150930_YgorString.h  20150930_install.sh  Makefile.cross_x86_64_musl_static  YgorAlgorithms.h_prior_to_removing_comments  YgorMath.cc_prior_to_fixing_samples1D_summation  YgorMath.cc_prior_to_fixing_vec3_map_32bit_equality_prob  YgorMath.cc_prior_to_split_rewrite_not_working_properly  YgorSerialize.cc  (+1 more)
SANDBOX/: Args.tar.xz  Bimap.tar.xz  Contour_Integration.tar.xz  Coroutines.tar.xz  MathGL.tar.xz  Multicast.tar.xz  MyPlot2.tar.xz  MyTypes.tar.xz  NonParametricRegressions.tar.xz  Sampled_f.tar.xz  String_Wrapper.tar.xz
SANDBOX/VTK_Plotting/: CMakeLists.txt  LinePlot.cc
Snapshots/: 20140317_Ygor_All_H_CC.html
Tests/: Test_Algorithms.cc  Test_Algorithms3.cc  Test_Arguments.cc  Test_Containers.cc  Test_Containers2.cc  Test_Environment2.cc  Test_FilesDirs1.cc  Test_FilesDirs3.cc  Test_FilesDirs4.cc  Test_Images2.cc  Test_Math10.cc  Test_Math12.cc  Test_Math13.cc  Test_Math14.cc  Test_Math15.cc  Test_Math16.cc  Test_Math2.cc  Test_Math3.cc  Test_Math4.cc  Test_Math5.cc  Test_Math6.cc  Test_Math7.cc  Test_Math8.cc  Test_Math9.cc  Test_Networking_2.cc  Test_Noise.cc  Test_Noise2.cc  Test_Stats.cc  Test_Video.cc  compile.sh
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
benchmarking/: 01_Benchmark_vec3.cc  compile.sh  compile_and_run.sh
binaries/: CMakeLists.txt  GetNutritionfactsUrls.cc  GetRedditMovies.cc  GetRedditMusic.cc  GetRedditUrls.cc  GetUrls.cc  GetVideosiftUrls.cc  GetVimeoUrls.cc  Parse_TAR_Files.cc  Regex_Tester.cc  Replace_NaNs.cc  TwoT_PValue.cc  Ygor_CI_Tree_Predict.cc  Ygor_CI_Tree_Train.cc  Ygor_Conditional_Forest_Predict.cc  Ygor_Conditional_Forest_Train.cc  Ygor_Stochastic_Forest_Predict.cc  Ygor_Stochastic_Forest_Train.cc
build-min/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  YgorConfig.cmake  YgorConfigVersion.cmake  cmake_install.cmake  compile_commands.json
cmake/: YgorConfig.cmake.in
nix/: NOTES  compile.sh  default.nix  testcompile_derivation.nix
scripts/: compute_sloccount.sh  plot_contour_of_points_2D.sh  plot_contour_of_points_3D.sh
src/: CMakeLists.txt  YgorAlgorithms.cc  YgorAlgorithms.h  YgorArguments.h  YgorBase64.cc  YgorBase64.h  YgorCONFIGTools.cc  YgorCONFIGTools.h  YgorContainers.cc  YgorContainers.h  YgorDICOMTools.cc  YgorDICOMTools.h  YgorDefinitions.h.in  YgorEnvironment.cc  YgorEnvironment.h  YgorFilesDirs.cc  YgorFilesDirs.h  YgorIO.h  YgorIOgzip.cc  YgorIOgzip.h  YgorImages.cc  YgorImages.h  YgorImagesDithering.cc  YgorImagesDithering.h  YgorImagesIO.cc  YgorImagesIO.h  YgorImagesIOBoostSerialization.h  YgorImagesPlotting.h  YgorIndex.cc  YgorIndex.h  YgorIndexCells.cc  YgorIndexCells.h  YgorIndexKDTree.cc  YgorIndexKDTree.h  YgorIndexOctree.cc  YgorIndexOctree.h  YgorIndexRTree.cc  YgorIndexRTree.h  YgorLog.cc  YgorLog.h  (+122 more)
tests/: Report_Machine_Parameters.cc  Test_Algorithms2.cc  Test_Algorithms_01.cc  Test_Algorithms_02.cc  Test_Algorithms_03.cc  Test_Arguments_01.cc  Test_Base64_01.cc  Test_Containers_02.cc  Test_Environment.cc  Test_Environment_01.cc  Test_Environment_02.cc  Test_FilesDirs.cc  Test_FilesDirs_01.cc  Test_FilesDirs_02.cc  Test_FilesDirs_03.cc  Test_FilesDirs_04.cc  Test_Images.cc  Test_Images_01.cc  Test_Images_02.cc  Test_Images_03.cc  Test_Images_Dithering.cc  Test_Math11.cc  Test_Math13.cc  Test_Math17.cc  Test_Math19.cc  Test_Math2.cc  Test_Math20.cc  Test_Math21.cc  Test_Math24.cc  Test_Math25.cc  Test_Math6.cc  Test_Math_01.cc  Test_Math_02.cc  Test_Math_03.cc  Test_Math_04.cc  Test_Math_05.cc  Test_Math_06.cc  Test_Math_07.cc  Test_Math_08.cc  Test_Math_09.cc  (+54 more)
tests/Lagrangian_Interpolation/: CMakeLists.txt  Lagrange.cc  README  compile.sh
tests2/: 01_Test_Main.cc  02_Test_YgorMath_vec3.cc  03_Test_YgorMath_vec2.cc  YgorAlgorithms.cc  YgorBase64.cc  YgorFilesDirs.cc  YgorIO.cc  YgorIOgzip.cc  YgorImages.cc  YgorIndexCells.cc  YgorIndexKDTree.cc  YgorIndexOctree.cc  YgorIndexRTree.cc  YgorMathConstrainedDelaunay.cc  YgorMathConstrainedDelaunay.h  YgorMathDelaunay.cc  YgorMathDelaunayViaVoronoi.cc  YgorMathIOCSV.cc  (+42 more)
(+48 files in other folders)
